--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -5,7 +5,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+            - name: Define variable
+              run: echo "USERNAME=${{github.actor}}" >> $GITHUB_ENV
             - uses: actions/setup-node@v2
               with:
-                  node-version: 'lts/*'
+                  node-version: '22.7.0'
             - run: node index.js
