--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -9,5 +9,6 @@ jobs:
               run: echo "USERNAME=${{github.actor}}" >> $GITHUB_ENV
             - uses: actions/setup-node@v2
               with:
-                  node-version: '22.7.0'
+                  node-version: 'lts/*'
+            - run: npm install
             - run: node index.js
